<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Header Bar -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_lg"
        android:gravity="center_vertical"
        android:background="@color/background_white">

        <!-- Back Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/icon_xl"
            android:layout_height="@dimen/icon_xl"
            android:src="@drawable/ic_arrow_right"
            android:rotation="180"
            android:contentDescription="@string/back"
            app:tint="@color/brand_black" />

        <!-- Title -->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/event_details_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_h3"
            android:textStyle="bold" />

        <!-- Menu Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMenu"
            android:layout_width="@dimen/icon_xl"
            android:layout_height="@dimen/icon_xl"
            android:src="@drawable/ic_shield"
            android:contentDescription="@string/menu"
            app:tint="@color/brand_black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_light" />

    <!-- Event Image Placeholder -->
    <View
        android:id="@+id/vImagePlaceholder"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/placeholder_light" />

</androidx.appcompat.widget.LinearLayoutCompat>
